# receipt_engine_backend

./: .dockerignore  .env.example  .gitignore  10_up_with_docker_compose.sh  20_run_pytest.sh  30_demo_system_with_curl.sh  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_07_06_1242-d74a0c640552_initial_migration.py
app/: config.py
app/api/: auth.py  public.py  receipts.py
app/auth/: dependencies.py  security.py
app/database/: connection.py  models.py
app/domain/entities/: receipt.py  user.py
app/domain/schemas/: auth.py  receipt.py  user.py
app/services/: receipt_formatter.py
tests/: conftest.py  test_basic_functionality.py  test_public.py  test_public_endpoints.py  test_public_receipt_integration.py  test_receipt_advanced.py  test_receipt_api.py  test_receipt_api_fixed.py  test_receipt_api_integration.py  test_receipt_api_simple.py  test_receipt_entities.py  test_receipt_entities_fixed.py  test_receipt_models.py  test_receipt_models_integration.py  test_receipt_performance.py  test_receipt_schemas.py  test_services.py  test_stage7_fixed.py
tests/database/: test_alembic_configuration_is_valid.py  test_alembic_env_connects_to_database.py  test_migration_creation_works.py  test_migration_downgrade_works.py  test_migration_upgrade_works.py
