[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-management-api"
version = "0.1.0"
description = "REST API for receipt management"
authors = [
    {name = "Developer", email = "dev@example.com"},
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
]
